# pel

./: Makefile  README.md  pyproject.toml  vendorize.toml
.github/workflows/: release-no-pypi.yml  release.yml  test.yml
examples/filesystem-dependencies/: build.py
examples/simple/: build.py
pel/: console.py  core.py  exceptions.py  filesystem.py  run.py  tasks.py
tests/: __init__.py  test_examples.py  util.py
tests/examples/: test_filesystem_dependencies.py  test_simple.py
